{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 7,
  "lineage": "513502df-e02d-245d-ad14-449678e1c9a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_end_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:security-group/sg-0672c1ddf8131d167",
            "description": "Security group for front_end",
            "egress": [],
            "id": "sg-0672c1ddf8131d167",
            "ingress": [],
            "name": "naumtest-front_end",
            "name_prefix": "",
            "owner_id": "809659887358",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for front_end",
              "createdBy": "infra-naumtest/news"
            },
            "tags_all": {
              "Name": "SG for front_end",
              "createdBy": "infra-naumtest/news"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff654956a46a846e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:809659887358:security-group/sg-015bfc2fbe3702b36",
            "description": "SSH access group",
            "egress": [],
            "id": "sg-015bfc2fbe3702b36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "naumtest-ssh_access",
            "name_prefix": "",
            "owner_id": "809659887358",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP",
              "createdBy": "infra-naumtest/news"
            },
            "tags_all": {
              "Name": "Allow HTTP",
              "createdBy": "infra-naumtest/news"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff654956a46a846e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1034078539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0672c1ddf8131d167",
            "security_group_rule_id": "sgr-0423e5f1110c30cec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.front_end_sg",
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "front_end_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3773024744",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0672c1ddf8131d167",
            "security_group_rule_id": "sgr-0f28d262cf34adbcc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.front_end_sg",
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    }
  ]
}